--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,15 @@
   --black: #242424;
   --white: rgba(255, 255, 255, 0.87);
   --orange: #f97316;
+  --orange-darker: #b45309;
   --green: #22c55e;
   --blue: #3b82f6;
+  --blue-light: #17bfe9;
+  --purple: #a855f7;
   --red: #ef4444;
+}
+
+body {
+  /* font-family: "Comfortaa Variable", system-ui; */
 }
 
