--- a/src/components/Uploader/Uploader.module.css
+++ b/src/components/Uploader/Uploader.module.css
@@ -5,6 +5,9 @@
 .label {
   display: block;
 
+  width: max-content;
+
+  margin: auto;
   padding: 15px 25px;
 
   font-family: "Press Start 2P", system-ui;
@@ -38,7 +41,36 @@
 }
 
 .label-disabled {
-  opacity: 0.5;
+  opacity: 0.8;
   cursor: default;
   pointer-events: none;
+}
+
+.loader span {
+  animation-name: blink;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
+.loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.2;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.2;
+  }
 }
