--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -31,7 +31,7 @@
 .button {
   position: relative;
   z-index: 2;
-  
+
   width: 75px;
   height: auto;
 
@@ -52,6 +52,40 @@
 
   &:active {
     transform: scale(0.9);
+  }
+}
+
+.button.back,
+.button.next {
+  opacity: 0;
+
+  pointer-events: none;
+
+  transition: 0.5s ease-in-out;
+}
+
+.root:hover {
+  .button.back,
+  .button.next {
+    opacity: 1;
+
+    pointer-events: all;
+
+    transition: 0.5s ease-in-out;
+  }
+}
+
+@media (hover: none) {
+  .button.back,
+  .button.next {
+    opacity: 1;
+  }
+}
+
+@media (pointer: coarse) {
+  .button.back,
+  .button.next {
+    opacity: 1;
   }
 }
 
