--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -10,9 +10,21 @@
   left: 0;
 
   width: 100%;
-  height: 100px;
+  height: 60px;
 
   background-color: #000000;
+
+  @media screen and (min-width: 768px) {
+    height: 70px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    height: 80px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    height: 100px;
+  }
 }
 
 .animated {
@@ -23,16 +35,28 @@
   left: 0;
 
   width: 100%;
-  height: 100px;
+  height: 60px;
 
   animation: glow-box 2s ease-in-out infinite alternate;
+
+  @media screen and (min-width: 768px) {
+    height: 70px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    height: 80px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    height: 100px;
+  }
 }
 
 .button {
   position: relative;
   z-index: 2;
 
-  width: 75px;
+  width: 50px;
   height: auto;
 
   background: none;
@@ -52,6 +76,18 @@
 
   &:active {
     transform: scale(0.9);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 60px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 70px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 75px;
   }
 }
 
